--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -503,6 +503,8 @@
                     <p>Thank you for making a Fika friend request through Kompisbyrån!</p>
                     <p>
                         We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends.<br /><br />
+                        We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
+                        
                         If you have any questions, please send us an e-mail :)
                     </p>
                     <p>
@@ -515,6 +517,7 @@
                 <target>
                     Thank you for making a Fika friend request through Kompisbyrån!
                     We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends.
+                    We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
 
                     If you have any questions, please send us an e-mail :)
 
@@ -530,7 +533,7 @@
                 <target><![CDATA[
                     <p>Thank you for making a Music friend request through Kompisbyrån!</p>
                     <p>
-                       We will send you an e-mail as soon as we have found a Music friend for you. Our ambition is to find a friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends.<br /><br />
+                       We will send you an e-mail as soon as we have found a Music friend for you. Our ambition is to find a friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends.We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.<br /><br />
                        If you have any questions, please send us an e-mail :)
                     </p>
                     <p>
