--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -422,25 +422,26 @@
                 <target><![CDATA[
                     <ul>
                         <li>
-                            Kompisbyrån förmedlar kontakten mellan personer som är nya i Sverige med personer som har bott 
-                            i Sverige länge. Tanken är att ge dig möjlighet att träffa flera olika personer med annan 
-                            bakgrund än din egen, för att kunna skapa ett socialt nätverk.
+                            Tanken är att ge dig möjlighet att träffa flera olika personer med annan bakgrund än din egen, 
+                            för att kunna utöka ditt sociala nätverk.
                         </li>
                         <li>
-                            Kompisbyrån skapar kontakt mellan nya kompisar baserat på liknande intressen. 
+                            Kompisbyrån matchar ihop två nya kompisar främst baserat på liknande intressen. Det innebär att 
+                            du kan matchas med en person som till exempel är i en annan ålder eller kön. Om du har 
+                            önskemål/krav, vänligen skriv detta tydligt i din ansökan så att vi kan försöka tillgodose det. 
                         </li>
                         <li>
                             Du måste kunna träffas i Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås 
-                            eller Örebro.
+                            eller Örebro. Vi hoppas kunna länka samman nya kompisar i fler städer i framtiden.
                         </li>
                         <li>
-                            Kompisbyrån ansvarar endast för att matcha ihop personer som har bott i Sverige under kortare tid med 
+                            Kompisbyrån ansvarar endast för att länka samman personer som har bott i Sverige under kortare tid med 
                             personer som har bott i Sverige länge. 
                         </li>
                         <li>
-                            Utgångspunkten är att en kompisfika eller ett musikmöte med samma person sker en gång. Gillar ni 
-                            varandra får ni gärna träffas igen själva. Vill du träffa en ny fikakompis eller musikkompis, loggar 
-                            du in och gör en ny förfrågan. 
+                            Utgångspunkten är att en kompisfika eller ett musikmöte med samma person sker en gång. Kommer ni 
+                            bra överens får ni gärna träffas igen själva. Vill du träffa en ny person, loggar du in och gör 
+                            en ny förfrågan. 
                         </li>
                         <li>
                             Alla över 18 år (myndiga) får delta.
@@ -464,10 +465,16 @@
                             beroende på din profil och hur många personer som också vill träffa nya kompisar. Det innebär att du kan få vänta.
                         </li>
                         <li>
-                            När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett e-mail till dig.
+                            När vi har tagit emot din ansökan, bekräftar vi detta genom att skicka ett email till dig.
                         </li>
                         <li>
-                            Du bör skicka ett e-mail till din nya fikakompis och bestämma när ni kan träffas inom 7 dagar.
+                            Respektera varandra. Kom ihåg att en avbokning påverkar en annan person som har planerat och 
+                            sett fram emot en träff. Tänk efter en extra gång innan du anmäler dig, att du verkligen vill 
+                            vara med.
+                        </li>
+                        <li>
+                            Det är bådas ansvar att kontakta varandra inom 7 dagar från att du fått ett matchningsmail 
+                            från oss. Byt gärna telefonnummer med varandra för att lättare bestämma träff.
                         </li>
                         <li>
                             Du måste behandla alla på ett respektfullt sätt. Tänk på att vara tydliga mot varandra då 
@@ -480,8 +487,8 @@
                             Kompisbyrån kan inte garantera att vi hittar en ny kompis till dig men vi gör alltid vårt bästa.
                         </li>
                         <li>
-                            Vi vill hela tiden bli bättre på vårt arbete. Därför skickar vi ett e-mail till dig efter att du har
-                            träffat din nya kompis för att fråga hur ert möte var.
+                            Vi vill hela tiden bli bättre på vårt arbete. Därför skickar vi ett email till dig efter ert möte för 
+                            att fråga hur det var.
                         </li>
                     </ul>]]></target>
             </trans-unit>
