--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -502,9 +502,21 @@
                 <target><![CDATA[
                     <p>Thank you for making a Fika friend request through Kompisbyrån!</p>
                     <p>
-                        We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends.<br /><br />
-                        We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
+                        This is how it works:
                         
+                        1. Match. We will send you an email (often within 1-30 days) when we have found new Fika friend for 
+                        you who has similar interests as you. (If you need to complete your application, we will let you know)
+                        
+                        2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
+                        Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
+                        of both that you establish contact. Remember to respect each other, not responding an email will 
+                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer. 
+                        
+                        3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high 
+                        expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t 
+                        show up, so please exchange telephone numbers and send a text message reminder the day before 
+                        your meeting, that the other person confirm. 
+                                                
                         If you have any questions, please send us an e-mail :)
                     </p>
                     <p>
@@ -516,9 +528,22 @@
                 <source>user.welcome.message.body.txt</source>
                 <target>
                     Thank you for making a Fika friend request through Kompisbyrån!
-                    We will send you an e-mail as soon as we have found a new Fika friend for you who has similar interests that you have. Our ambition is to find a Fika friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Fika friends.
-                    We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
-
+                    
+                    This is how it works:
+                    
+                    1. Match. We will send you an email (often within 1-30 days) when we have found a new Fika friend who 
+                    has similar interests as you. (If you need to complete your application, we will let you know)
+                    
+                    2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
+                    Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility of 
+                    both that you establish contact. Remember to respect each other, not responding an email will affect 
+                    the other person who has been looking forward to a meeting. Contact us if you don’t get answer. 
+                    
+                    3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high expectations 
+                    but take it as it comes. Be in time! The boring meetings is when someone doesn’t show up, so please 
+                    exchange telephone numbers and send a text message reminder the day before your meeting, that the other 
+                    person confirm. 
+                    
                     If you have any questions, please send us an e-mail :)
 
                     Best regards,
@@ -533,8 +558,22 @@
                 <target><![CDATA[
                     <p>Thank you for making a Music friend request through Kompisbyrån!</p>
                     <p>
-                       We will send you an e-mail as soon as we have found a Music friend for you. Our ambition is to find a friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends.We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.<br /><br />
-                       If you have any questions, please send us an e-mail :)
+                       This is how it works:
+                        
+                        1. Match. We will send you an email (often within 1-30 days) when we have found a new Music friend 
+                        who has similar interests as you. (If you need to complete your application, we will let you know)
+                        
+                        2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
+                        Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
+                        of both that you establish contact. Remember to respect each other, not responding an email will 
+                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer. 
+                        
+                        3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high 
+                        expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t 
+                        show up, so please exchange telephone numbers and send a text message reminder the day before 
+                        your meeting, that the other person confirm. 
+                        
+                        If you have any questions, please send us an email :) 
                     </p>
                     <p>
                         Best regards,<br />
@@ -545,9 +584,22 @@
                 <source>user.friend.welcome.message.body.txt</source>
                 <target>
                     Thank you for making a Music friend request through Kompisbyrån!
-                    We will send you an e-mail as soon as we have found a Music friend for you. Our ambition is to find a friend for you within 4 weeks but it can take both shorter and longer time depending on your profile and how many people there are who also want to find new Music friends.
-                    We would like to inform you that we will have a lower pace during the summer and is back with full capacity in August. We hope that we will find a good match for you soon, and we hope that you will wait.
-
+                    
+                    This is how it works:
+                        
+                    1. Match. We will send you an email (often within 1-30 days) when we have found a new Music friend 
+                    who has similar interests as you. (If you need to complete your application, we will let you know)
+                        
+                    2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
+                    Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
+                    of both that you establish contact. Remember to respect each other, not responding an email will 
+                    affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer. 
+                        
+                    3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high 
+                    expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t 
+                    show up, so please exchange telephone numbers and send a text message reminder the day before 
+                    your meeting, that the other person confirm. 
+                    
                     If you have any questions, please send us an e-mail :)
 
                     Best regards,
@@ -559,22 +611,30 @@
 
 Hej %user_name%!
 
-Vad kul att du vill vara med i Kompisbyrån!
-
-Vi har hittat en %match_music_friend% till dig. %match_gender% heter %match_name% och ni båda gillar %match_categories%.
-
+Nu har vi hittat en %match_music_friend% till dig. %match_gender% heter %match_name% och ni båda gillar %match_categories%.
 %match_name% är %match_age% år gammal, bor i %match_area% och kommer från %match_from%. %match_gender% träffas gärna i %match_city%.
 
-Din %match_music_friend% e-mail är: %match_email% Vi har också skickat din e-mail till din %match_music_friend%.
+Din %match_music_friend% email är: %match_email% Vi har också skickat din email till din %match_music_friend%.
 
 Gör så här:
-1. Skicka ett e-mail till din nya kompis och bestäm dag, tid och plats där ni ska ses. Skicka mailet inom 7 dagar. Vi rekommenderar att ni ses på en offentlig plats i cirka 1 timme, och att ni byter telefonnummer så att ni får tag på varandra.
 
-2. Ni träffas!
+1. Bestäm ett datum. Du mailar personen inom 7 dagar och bestämmer datum, tid och plats. Skriv gärna på svenska och engelska. 
+Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att respektera varandra, att inte svara på ett mail 
+påverkar den andra personen som har sett fram emot ett möte. Kontakta oss om du inte får svar.
 
-3. Under eller efter ert möte, ta gärna ett foto och skriv ett par meningar om hur mötet var. Maila fotohälsningen till oss, matchning@kompisbyran.se. Vi kommer att dela detta digitalt för att uppmuntra fler till att vara med i Kompisbyrån.
+Vi rekommenderar att ni byter telefonnummer och skickar en sms-påminnelse dagen innan er fika som den andra personen 
+bekräftar.
 
-Om du har frågor, kontakta oss! Vi önskar er ett trevligt möte!
+2. Ni träffas! Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha höga förväntningar 
+utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte dyker upp på utsatt tid.
+
+3. Om ni vill, ta gärna ett foto från ert möte och skriva några rader om vad ni gjorde och hur det var (med bådas samtycke). 
+Maila hälsningen till oss så delar vi den gärna digitalt för att inspirera fler till att vara med. Eller hashtagga själv 
+med #kompisbyrån eller #kompisbyran. 
+
+Du är alltid välkommen att höra av dig till oss om något inte blev som du tänkt dig. 
+
+Vi önskar er ett trevligt möte!
 
 Bästa hälsningar
 Vännerna på Kompisbyrån
@@ -584,23 +644,32 @@ Vännerna på Kompisbyrån
 
 Hello %user_name%!
 
-Thank you for being a part of Kompisbyrån!
-
-We have found a person for you to meet. The person you will meet is %match_name% and both of you like %match_categories%.
-
+We have now found a good match for you. The person you will meet is %match_name% and both of you like %match_categories%.
 %match_name% is %match_age% years old, lives in %match_area% and is from %match_from%. %match_name% would like to meet you in %match_city%.
 
 The email adress to %match_name% is: %match_email%. We have also sent your email adress to %match_name%.
 
 Please follow the steps below:
 
-1. Send an email to %match_name% and decide date, time and place where you should meet. Send the email within 7 days. We recommend that you meet at a public place for about 1 hour, and exchange phone numbers so that you can reach each other.
+1. Decide a date. You send an email to %match_name% within 7 days, and decide date, time and place. Write in Swedish or 
+English (some find Google Translate as a good tool). It is the responsibility of both that you establish contact. 
+Remember to respect each other, not responding an email will affect the other person who has been looking forward to a 
+meeting. Contact us if you don’t get answer.
 
-2. You meet each other!
+We recommend that you exchange telephone numbers and send a text message as a reminder the day before your meeting, 
+that the other person confirm.
 
-3. During or after your meeting, we would be very happy if you would like to take a photo and write some sentences about your experience. Please, send the photo greeting to: matchning@kompisbyran.se so that we can share your story digitally to encourage more people to join.
+2. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high expectations but take it as 
+it comes. Be in time! The boring meetings is when someone doesn’t show up on time. 
 
-Please, contact us if you have any questions! We wish you a nice meeting!
+3. The stories from your meetings are always so inspiring. If you want, take a photo during your meeting and tell us 
+more about what you did and how it was (with approval from both of you). If you send it to us, and we will share it 
+digitally. Or feel free to hashtag #kompisbyrån or #kompisbyran
+
+You are always welcome to contact us if anything was not what you expected.
+
+We wish you a nice meeting!
+
 
 Best regards,
 Your friends at Kompisbyrån
