--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -746,10 +746,10 @@ The email adress to %match_name% is: %match_email%. We have also sent your email
 
 Please follow the steps below:
 
-1. Decide a date. You send an email to Molham Zitouni within 7 days, and decide date, time and place. Write in Swedish or 
-English (some find Google Translate as a good tool). It is the responsibility of both that you establish contact. Remember 
-to respect each other, not responding an email will affect the other person who has been looking forward to a meeting. 
-Contact us if you don’t get answer. 
+1. Decide a date. You send an email to %match_name% within 7 days, and decide date, time and place. Write in Swedish or 
+English (some find Google Translate as a good tool). It is the responsibility of both that you establish contact. 
+Remember to respect each other, not responding an email will affect the other person who has been looking forward to a 
+meeting. Contact us if you don’t get answer.
 
 We recommend that you exchange telephone numbers and send a text message as a reminder the day before your meeting, that 
 the other person confirm.
