--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -502,22 +502,22 @@
                 <target><![CDATA[
                     <p>Thank you for making a Fika friend request through Kompisbyrån!</p>
                     <p>
-                        This is how it works:
+                        This is how it works:<br><br>
                         
                         1. Match. We will send you an email (often within 1-30 days) when we have found new Fika friend for 
-                        you who has similar interests as you. (If you need to complete your application, we will let you know)
+                        you who has similar interests as you. (If you need to complete your application, we will let you know)<br><br>
                         
                         2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
                         Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
                         of both that you establish contact. Remember to respect each other, not responding an email will 
-                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer. 
+                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer.<br><br> 
                         
                         3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high 
                         expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t 
                         show up, so please exchange telephone numbers and send a text message reminder the day before 
-                        your meeting, that the other person confirm. 
+                        your meeting, that the other person confirm.<br><br> 
                                                 
-                        If you have any questions, please send us an e-mail :)
+                        If you have any questions, please send us an e-mail :)<br><br>
                     </p>
                     <p>
                         Best regards,<br />
@@ -558,22 +558,22 @@
                 <target><![CDATA[
                     <p>Thank you for making a Music friend request through Kompisbyrån!</p>
                     <p>
-                       This is how it works:
+                       This is how it works:<br><br>
                         
                         1. Match. We will send you an email (often within 1-30 days) when we have found a new Music friend 
-                        who has similar interests as you. (If you need to complete your application, we will let you know)
+                        who has similar interests as you. (If you need to complete your application, we will let you know)<br><br>
                         
                         2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
                         Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
                         of both that you establish contact. Remember to respect each other, not responding an email will 
-                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer. 
+                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer.<br><br> 
                         
                         3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high 
                         expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t 
                         show up, so please exchange telephone numbers and send a text message reminder the day before 
-                        your meeting, that the other person confirm. 
+                        your meeting, that the other person confirm.<br><br> 
                         
-                        If you have any questions, please send us an email :) 
+                        If you have any questions, please send us an email :)<br><br> 
                     </p>
                     <p>
                         Best regards,<br />
@@ -611,26 +611,19 @@
 
 Hej %user_name%!
 
-Nu har vi hittat en %match_music_friend% till dig. %match_gender% heter %match_name% och ni båda gillar %match_categories%.
-%match_name% är %match_age% år gammal, bor i %match_area% och kommer från %match_from%. %match_gender% träffas gärna i %match_city%.
+Nu har vi hittat en %match_music_friend% till dig. %match_gender% heter %match_name% och ni båda gillar %match_categories%. %match_name% är %match_age% år gammal, bor i %match_area% och kommer från %match_from%. %match_gender% träffas gärna i %match_city%.
 
 Din %match_music_friend% email är: %match_email% Vi har också skickat din email till din %match_music_friend%.
 
 Gör så här:
 
-1. Bestäm ett datum. Du mailar personen inom 7 dagar och bestämmer datum, tid och plats. Skriv gärna på svenska och engelska. 
-Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att respektera varandra, att inte svara på ett mail 
-påverkar den andra personen som har sett fram emot ett möte. Kontakta oss om du inte får svar.
+1. Bestäm ett datum. Du mailar personen inom 7 dagar och bestämmer datum, tid och plats. Skriv gärna på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att respektera varandra, att inte svara på ett mail påverkar den andra personen som har sett fram emot ett möte. Kontakta oss om du inte får svar.
 
-Vi rekommenderar att ni byter telefonnummer och skickar en sms-påminnelse dagen innan er fika som den andra personen 
-bekräftar.
+Vi rekommenderar att ni byter telefonnummer och skickar en sms-påminnelse dagen innan er fika som den andra personen bekräftar.
 
-2. Ni träffas! Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha höga förväntningar 
-utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte dyker upp på utsatt tid.
+2. Ni träffas! Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha höga förväntningar utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte dyker upp på utsatt tid.
 
-3. Om ni vill, ta gärna ett foto från ert möte och skriva några rader om vad ni gjorde och hur det var (med bådas samtycke). 
-Maila hälsningen till oss så delar vi den gärna digitalt för att inspirera fler till att vara med. Eller hashtagga själv 
-med #kompisbyrån eller #kompisbyran. 
+3. Om ni vill, ta gärna ett foto från ert möte och skriva några rader om vad ni gjorde och hur det var (med bådas samtycke). Maila hälsningen till oss så delar vi den gärna digitalt för att inspirera fler till att vara med. Eller hashtagga själv med #kompisbyrån eller #kompisbyran. 
 
 Du är alltid välkommen att höra av dig till oss om något inte blev som du tänkt dig. 
 
@@ -644,27 +637,19 @@ Vännerna på Kompisbyrån
 
 Hello %user_name%!
 
-We have now found a good match for you. The person you will meet is %match_name% and both of you like %match_categories%.
-%match_name% is %match_age% years old, lives in %match_area% and is from %match_from%. %match_name% would like to meet you in %match_city%.
+We have now found a good match for you. The person you will meet is %match_name% and both of you like %match_categories%. %match_name% is %match_age% years old, lives in %match_area% and is from %match_from%. %match_name% would like to meet you in %match_city%.
 
 The email adress to %match_name% is: %match_email%. We have also sent your email adress to %match_name%.
 
 Please follow the steps below:
 
-1. Decide a date. You send an email to %match_name% within 7 days, and decide date, time and place. Write in Swedish or 
-English (some find Google Translate as a good tool). It is the responsibility of both that you establish contact. 
-Remember to respect each other, not responding an email will affect the other person who has been looking forward to a 
-meeting. Contact us if you don’t get answer.
+1. Decide a date. You send an email to %match_name% within 7 days, and decide date, time and place. Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility of both that you establish contact. Remember to respect each other, not responding an email will affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer.
 
-We recommend that you exchange telephone numbers and send a text message as a reminder the day before your meeting, 
-that the other person confirm.
+We recommend that you exchange telephone numbers and send a text message as a reminder the day before your meeting, that the other person confirm.
 
-2. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high expectations but take it as 
-it comes. Be in time! The boring meetings is when someone doesn’t show up on time. 
+2. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t show up on time. 
 
-3. The stories from your meetings are always so inspiring. If you want, take a photo during your meeting and tell us 
-more about what you did and how it was (with approval from both of you). If you send it to us, and we will share it 
-digitally. Or feel free to hashtag #kompisbyrån or #kompisbyran
+3. The stories from your meetings are always so inspiring. If you want, take a photo during your meeting and tell us more about what you did and how it was (with approval from both of you). If you send it to us, and we will share it digitally. Or feel free to hashtag #kompisbyrån or #kompisbyran
 
 You are always welcome to contact us if anything was not what you expected.
 
